// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  aria-hidden={true}
  aria-labelledby="tab"
  className="a"
  role="tabpanel"
>
  TabsPanel
</div>
`;

exports[`should render 2`] = `
"
.a {
  background-color: #fff
}
"
`;

exports[`should render active 1`] = `
<div
  aria-hidden={false}
  aria-labelledby="tab"
  className="a"
  role="tabpanel"
>
  TabsPanel
</div>
`;

exports[`should render active 2`] = `
"
.a {
  background-color: #fff
}
"
`;
